// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPasswordPage should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Password
        </h1>
      </div>
      <form>
        <div
          class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="password"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Current Password
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="newPassword"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                New Password
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="confirmPassword"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Confirm New Password
              </label>
            </div>
          </div>
        </div>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="ebqwrow-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary eqfkc7t-el-button"
              type="submit"
            >
              Save Changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Password
      </h1>
    </div>
    <form>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="password"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Current Password
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="newPassword"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              New Password
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="confirmPassword"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Confirm New Password
            </label>
          </div>
        </div>
      </div>
      <div
        class="eay05y4-el-button-group"
      >
        <div
          class="ebqwrow-el-button-group-inner"
        >
          <button
            class="ebee6r1-el-intent-primary eqfkc7t-el-button"
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsPasswordPage should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Password
        </h1>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
            >
              Controls
            </button>
          </div>
        </div>
      </div>
      <form>
        <div
          class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="password"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Current Password
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="newPassword"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                New Password
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="confirmPassword"
                type="password"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Confirm New Password
              </label>
            </div>
          </div>
        </div>
        <div
          class="eay05y4-el-button-group"
        >
          <div
            class="ebqwrow-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary eqfkc7t-el-button"
              type="submit"
            >
              Save Changes
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Password
      </h1>
      <div
        class="eay05y4-el-button-group"
      >
        <div
          class="e1i2en9o-el-button-group-align-right ebqwrow-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low eqfkc7t-el-button"
          >
            Controls
          </button>
        </div>
      </div>
    </div>
    <form>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="password"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Current Password
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="newPassword"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              New Password
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="confirmPassword"
              type="password"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Confirm New Password
            </label>
          </div>
        </div>
      </div>
      <div
        class="eay05y4-el-button-group"
      >
        <div
          class="ebqwrow-el-button-group-inner"
        >
          <button
            class="ebee6r1-el-intent-primary eqfkc7t-el-button"
            type="submit"
          >
            Save Changes
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
